# src/controllers/auth/auth.document.ts
@@ -1,17 +1,18 @@
-import { Authentication } from "@APP/providers/authentication";
+import { Kakao } from "@APP/externals/oauth/kakao/sdk";
 import { TypedRoute } from "@nestia/core";
-import { Controller, Res } from "@nestjs/common";
+import { Controller, HttpCode, HttpStatus, Res } from "@nestjs/common";
 import { Response } from "express";
 
 @Controller("auth/oauth")
 export class AuthOauthController {
+    /**
+     * 카카오 로그인 페이지 리다이렉트 api
+     * @summary redirect kakao oauth login page
+     * @tag authentication
+     */
+    @HttpCode(HttpStatus.FOUND)
     @TypedRoute.Get("kakao")
     redirectToKakao(@Res() res: Response) {
-        return res.redirect(Authentication.Service.getLoginUrl["kakao"]);
-    }
-
-    @TypedRoute.Get("naver")
-    redirectToNaver(@Res() res: Response) {
-        return res.redirect(Authentication.Service.getLoginUrl["kakao"]); // change to naver
+        return res.redirect(Kakao.LoginUri);
     }
 }
